HUE-8919 [editor] Fix visibility of the column filter in the asterisk expansion popover

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-popover.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-popover.less
@@ -341,6 +341,11 @@
     .flex(1);
   }
 
+  .context-popover-asterisk-filter {
+    margin: 3px 10px;
+    .flex(1);
+  }
+
   .context-popover-sample-controls {
     .flex(0 0 120px);
 
